Implementar arquivo javascript mudando a primeira imagem

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <main>
       <section>
         <img
+          id="img"
           alt="Rick Sanchez piscando um olho e apontando para a esquerda"
           src="https://media.giphy.com/media/l41JU9pUyosHzWyuQ/giphy.gif"
         />
-        <ul id="detalhes-container-um">
+        <ul id="detalhes-container">
           <li>
             Nome:
             <p id="nome"></p>
@@ -34,46 +35,48 @@
 
       <section>
         <img
+          id="imgDois"
           alt="Rick And Morty em frente a um portal cosmico"
           src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/c50a4a55883023.5996f8afa3f5c.gif"
         />
-        <ul id="detalhes-container-um">
+        <ul id="detalhes-container">
           <li>
             Nome:
-            <p id="nome"></p>
+            <p id="nomeDois"></p>
           </li>
           <li>
             Espécie:
-            <p id="especie"></p>
+            <p id="especieDois"></p>
           </li>
           <li>
             Está vivo?
-            <p id="status"></p>
+            <p id="statusDois"></p>
           </li>
         </ul>
+        <button>Clique para conhecer alguns dos personagens</button>
       </section>
-
+      
       <section>
         <img
+          id="imgTres"
           alt="Morty correndo numa grama"
           src="https://images.squarespace-cdn.com/content/v1/528252b7e4b00150d03a4848/1503802780040-VI7XNTX2553X5LU8TW82/RickAndMorty_MortyRunning1500.gif"
         />
-        <ul id="detalhes-container-um">
+        <ul id="detalhes-container">
           <li>
             Nome:
-            <p id="nome"></p>
+            <p id="nomeTres"></p>
           </li>
           <li>
             Espécie:
-            <p id="especie"></p>
+            <p id="especieTres"></p>
           </li>
           <li>
             Está vivo?
-            <p id="status"></p>
+            <p id="statusTres"></p>
           </li>
         </ul>
       </section>
-      <button>Clique para conhecer alguns dos personagens</button>
     </main>
   </body>
 </html>
