--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p id="statusDois"></p>
           </li>
         </ul>
-        <button>Clique para conhecer alguns dos personagens</button>
+        
       </section>
       
       <section>
@@ -77,6 +77,7 @@
           </li>
         </ul>
       </section>
+      <button class="click-button">Clique para conhecer alguns dos personagens</button>
     </main>
   </body>
 </html>
